--- a/src/components/snake-game-box/game.css
+++ b/src/components/snake-game-box/game.css
@@ -54,7 +54,7 @@ body {
 	font-size: 24px;
 	font-family: 'Press Start 2P', cursive;
 	font-weight: 600;
-	color: lightcoral;
+	color: orange;
 }
 
 .currentScore {
