--- a/src/components/snake-game-box/game.css
+++ b/src/components/snake-game-box/game.css
@@ -44,9 +44,10 @@ body {
 
 .scoreBox {
 	position: fixed;
+	transform: translate(-50%, -50%);
 	border: 5px solid blue;
-	top: 15%;
-	left: 41%;
+	top: 20%;
+	left: 50%;
 	padding: 30px;
 }
 
