--- a/src/components/snake-game-box/index.css
+++ b/src/components/snake-game-box/index.css
@@ -1,13 +1,66 @@
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	background: lightskyblue;
+	font-family: 'Press Start 2P', cursive;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.playArea {
+	border: 5px solid blue;
+	width: 585px;
+	height: 440px;
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+.gameOver {
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	color: red;
+	font-size: 60px;
+	font-family: 'Press Start 2P', cursive;
+	text-transform: uppercase;
+}
+
+.playButton {
+	position: fixed;
+	top: 75%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	color: yellow;
+	background: #502c7b;
+	border: 2px solid lightcoral;
+	padding: 10px;
+	font-size: 30px;
+	box-shadow: 4px 4px 0px 0px #a3d001;
+	font-family: 'Press Start 2P', cursive;
+	font-weight: 700;
+	letter-spacing: 5px;
+	text-transform: uppercase;
+}
+
+.scoreBox {
+	position: fixed;
+	transform: translate(-50%, -50%);
+	border: 5px solid blue;
+	top: 20%;
+	left: 50%;
+	padding: 30px;
+}
+
+.highScore {
+	font-size: 24px;
+	font-family: 'Press Start 2P', cursive;
+	font-weight: 600;
+	color: orange;
+}
+
+.currentScore {
+	font-size: 24px;
+	font-family: 'Press Start 2P', cursive;
+	font-weight: 600;
+	color: #a3d001;
 }
